fix: prevent countdown overlap product's card

--- a/assets/component-countdown.css
+++ b/assets/component-countdown.css
@@ -1,11 +1,24 @@
 .countdown {
     display: flex;
+    flex-wrap: wrap;
     gap: 1rem;
     margin: 1rem 0.5rem;
+}
+
+@media screen and (min-width: 415px) {
+    .countdown {
+        flex-wrap: nowrap;
+    }
 }
 
 .countdown > * {
     line-height: 1;
     font-size: 1.4rem;
     font-style: italic;
+}
+
+@media screen and (max-width: 749px) {
+    .countdown__seconds {
+        display: none;
+    }
 }
